# llmse6

./: .aider.conf.yml  .aider.instructions.md  .gitignore  README.md  pyproject.toml
arox/: config.py
arox/agent_patterns/: __init__.py  chat.py  llm_base.py  state.py
arox/cli/: mcp_aggregator_server.py
arox/codebase/: repomap.py
arox/commands/: __init__.py  manager.py
arox/compose/: git_commit.py
arox/compose/coder/: config.toml  main.py  state.py
arox/compose/dev_team/: main.py  software_dev.py
arox/mcp/: aggregator_server.py
arox/resources/tree-sitter-language-pack/: README.md
arox/tools/: file_edit.py  search_reading.py
arox/utils/: __init__.py  git.py
docs/: contribute.md  overview.md
etc/: config-example.yaml
llmse6/: config.py  utils.py
llmse6/agent_patterns/: __init__.py  chat.py  llm_base.py  state.py
llmse6/agents/: __init__.py  chat.py  general.py  git_commit.py  llm_base.py  prd.py  prompt.py  state.py  ux.py
llmse6/agents/metadata/: general.yaml  prd.yaml  ux.yaml
llmse6/cli/: mcp_aggregator_server.py
llmse6/codebase/: project.py  repomap.py
llmse6/commands/: __init__.py  manager.py  tool_adapter.py
llmse6/compose/: git_commit.py
llmse6/compose/coder/: config.toml  main.py  prompt.py  state.py
llmse6/compose/demos/: rewrite.config.toml.example  rewrite.py  rewrite.toml  software_dev.py  software_dev.toml
llmse6/compose/dev_team/: main.py  software_dev.py
llmse6/mcp/: aggregator_server.py
llmse6/tools/: file_edit.py  search_reading.py
llmse6/utils/: __init__.py  git.py  io.py
tests/: test_config.py  test_utils.py
tests/commands/: test_tool_adapter.py
tests/functional/: rewrite.toml  test_rewrite.py
tests/tools/: test_file_edit.py
tests/unit/: test_config.py  test_utils.py
tests/unit/commands/: test_tool_adapter.py
tests/unit/tools/: test_file_edit.py
tools/: lint
