[project]
name = "llmse6"
version = "0.0.1"
authors = [
    {name="fangzhen", email="fangzhen@live.com"},
]
description = "Flexible LLM-based Agents"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "tomli",
    "prompt-toolkit>=3.0",
    "pyyaml>=6.0",
    "kissllm",
    "asyncio",
    "GitPython>=3.1.30",
]
[project.urls]
Homepage = "https://github.com/fangzhen/llmse6"

[tool.setuptools.packages.find]
where = ["."]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
